# Trading-ntrader

./: .dockerignore  .env.example  .gitignore  .gitmodules  BUG-REPORT-trade-persistence.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  coverage.json  docker-compose.yml  environment.yml  main.py  mypy.ini  ntrader.ipynb  ntrader.py  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_data_import.csv
.claude/: settings.json
.claude/commands/: commit.md  implement.md  plan.md  tasks.md
.claude/hooks/: bash-guard.sh  format-python.sh  protect-files.sh
.github/: CLAUDE_SETUP.md  README.md  testing.md
.github/scripts/: claude_reviewer.py
.github/workflows/: README.md  ci.yml  claude-pr-review.yml  test-claude-review.yml
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
_bmad-output/: project-context.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agent_docs/: architecture.md  conventions.md  nautilus.md  persistence.md  testing.md
alembic/: env.py
alembic/versions/: 0937d13d2502_add_comprehensive_nautilus_trader_.py  34f3c8e99016_add_trades_table_for_individual_trade_.py  7d28f3a711e7_create_market_data_table.py  9c7d5c448387_create_backtest_runs_and_performance_.py
analysis/: apolo_rsi_qqq_2000_2025.md
config/: app_config.yaml
configs/: apolo_rsi_amd.yaml  apolo_rsi_qqq.yaml  sma_config_50_200.yaml
configs/examples/: connors_rsi_qqq.yaml  mean_reversion_config.yaml  momentum_config.yaml  sma_config.yaml
data/: AAPL_test_2018.csv  README.md  sample_AAPL.csv  trading_platform.db
docs/: BACKTEST_RUN_CONSOLIDATION.md  IBKR_SETUP.md  SMA_CROSSOVER_FIXES.md  api-contracts.md  architecture.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
docs/agent/: architecture.md  data-pipeline.md  nautilus.md  testing.md  web-ui.md
docs/archive/: test-failure-fix-plan.md
docs/governance/: development-principles.md
docs/guides/: claude-code-git-worktrees-guide.md
docs/pr-review/: PR-16-apolo-rsi-backtest-unification.md
docs/product/: PRD.md  PRODUCT_OVERVIEW.md
docs/qa/: TC-DATA-001-sharpe-ratio-validation.md  TC-DATA-002-max-drawdown-validation.md  comprehensive-test-plan.md  data-validation-summary.md  test-execution-results.md
docs/research/: multi-condition-signal-validation.md
docs/testing/: popular-patterns-for-cextension-testing.md  testing-philosophy-trading-engine.md
docs/webui/: NTrader-webui-specification.md  NTrader_Web_UI–Developer_Guide.md
scripts/: build-css.sh  check_alembic_version.py  check_db_tables.py  check_saved_backtest.py  complete_qa_data.sh  fix_total_return_migration.py  setup_qa_data.sh  test_tws_connection.py  validate_chart_data.py  validate_max_drawdown.py  validate_sharpe_ratio.py  validate_trading_metrics.py
specs/001-docs-prd-md/: milestone-3-design.md  milestone-3-integration-plan.md  milestone-4-design.md  milestone-4-integration-plan.md  milestone-5-integration-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-migrate-from-dual/: BUG-11-INSTRUMENT-PERSISTENCE.md  BUG-8-FIX.md  SESSION-2-SUMMARY.md  SESSION-4-TEST-RESULTS.md  SESSION-5-TEST-FIXES.md  TESTING-SUMMARY.md  fixes-applied.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  config.py
src/api/: __init__.py  web.py  (+1 more)
tasks/: prd-algorithmic-trading-platform.md  tasks-prd-algorithmic-trading-platform.md
templates/: base.html  dashboard.html
tests/: __init__.py  conftest.py  test_backtest_commands.py  test_backtest_runner.py  test_backtest_runner_yaml.py  test_cli.py  test_cli_commands.py  test_cli_ibkr_commands.py  test_config.py  test_config_loader.py  test_csv_export.py  test_csv_loader.py  test_data_commands.py  test_data_fetcher.py  test_data_service.py  test_data_wrangler.py  test_date_range_adjustment.py  test_db_session.py  test_export_validation.py  test_fee_models.py  test_historical_data_fetcher.py  test_ibkr_client.py  test_ibkr_config.py  test_ibkr_connection.py  test_ibkr_database_integration.py  test_json_export.py  test_mean_reversion.py  test_metrics.py  test_milestone_4_e2e.py  test_mock_data.py  test_momentum.py  test_portfolio_analytics.py  test_portfolio_service.py  test_pyramid_distribution.py  test_report_commands.py  test_rsi_mean_reversion.py  test_simple_backtest.py  test_sma_momentum.py  test_sma_strategy.py  test_strategy_commands.py  (+4 more)
(+427 files in other folders)
